--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -106,9 +106,9 @@
 		<field name="priority" eval="10"/>
 		<!--<field name="inherit_id" ref="mstech.view_project_task_technical"/>-->
 		<field name="arch" type="xml">
-			<xpath expr="//tree" position="inside">
+			<tree editable="bottom">
 				<button name="do_unreserve" type="object" string="Unreserve"/>
-			</xpath>	
+			</tree>	
 		</field>
 	</record>
     </data>
