--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -24,7 +24,7 @@
 								<field name="company_id" groups="base.group_multi_company" optional="hide"/>
 								<field name="location_id" options="{'no_create': True}" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
 								<field name="location_dest_id" options="{'no_create': True}" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
-								<!--<button name="do_unreserve" type="object" string="Unreserve"/>-->
+								<button name="do_unreserve" type="object" string="Cancelar Reserva"/>
 							</tree>
 						</field>
 					</page>
