--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -15,7 +15,7 @@
 				</xpath>
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
-						<field name="mov_herramienta" domain="[('partner_id','=',partner_id),('state','=','draft')]"> <!--,('picking_type_id.code','=','internal')]">-->
+						<!--<field name="mov_herramienta" domain="[('partner_id','=',partner_id),('state','=','draft')]",('picking_type_id.code','=','internal')]">
 							<tree editable="bottom">
 								<field name="name" decoration-bf="1"/>
 								<field name="picking_type_id" optional="show"/>
@@ -24,12 +24,18 @@
 								<field name="company_id" groups="base.group_multi_company" optional="hide"/>
 								<field name="location_id" options="{'no_create': True}" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
 								<field name="location_dest_id" options="{'no_create': True}" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
-								<!--<button name="do_unreserve" type="object" string="Cancelar Reserva"/>-->
+								<button name="do_unreserve" type="object" string="Cancelar Reserva"/>
 							</tree>
-						</field>
+						</field> -->
 						<!--<button name="do_unreserve" type="object" string="Cancelar Reserva"/>
 						<button name="do_create" type="object" string="Crear Reserva"/>-->
-						<field name="task_picking"/>
+						<div class="text-center">
+							<div class="col h5">
+								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;" >
+								<field name="task_picking"/>
+							</div>
+						</div>
+						
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
