--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -33,6 +33,10 @@
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
 								<field name="task_picking"/>
+									<tree editable="button">
+										<button name="action_confirm_picking" type="object" string="Marcar Hecho"/>
+									</tree>
+								</field>	
 							</div>
 						</div>
 						
