--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -35,7 +35,7 @@
 								<field name="task_picking">
 									<tree editable="button">
 										<field name="name" decoration-bf="1"/>
-										<field name="picking_type_id" optional="show" readonly="0"/>
+										<!--<field name="picking_type_id" optional="show" readonly="0"/>-->
 										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
 										<field name="partner_id" optional="show"/>
 										<field name="company_id" groups="base.group_multi_company" optional="hide"/>
