--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -33,7 +33,7 @@
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
 								<field name="task_picking">
-									<tree editable="button">
+									<tree editable="button" create="1">
 										<field name="name" decoration-bf="1"/>
 										<!--<field name="picking_type_id" optional="show" readonly="0"/>-->
 										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
