--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -32,7 +32,7 @@
 						<div class="text-center">
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
-								<field name="task_picking" domain="[('partner_id','=',partner_id),('state','=','draft')]",('picking_type_id.code','=','internal')]">
+								<field name="task_picking" domain="[('partner_id','=',partner_id),('state','=','draft'),('picking_type_id.code','=','internal')]">
 									<tree editable="button" create="1">
 										<field name="name" decoration-bf="1"/>
 										<field name="picking_type_id" optional="show" readonly="0"/>
