--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -42,7 +42,7 @@
 										<field name="location_id" options="{'no_create': True}" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
 										<field name="location_dest_id" options="{'no_create': True}" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
 										<field name="state"/>
-										<button name="action_confirm" type="object" string="Marcar Hecho"/>
+										<!--<button name="action_confirm" type="object" string="Marcar Hecho"/>-->
 									</tree>
 								</field>	
 							</div>
