--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -33,7 +33,7 @@
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
 								<field name="task_picking">
-									<tree editable="button" create="1">
+									<tree editable="button">
 										<field name="name" decoration-bf="1"/>
 										<field name="picking_type_id" optional="show"/>
 										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
@@ -41,7 +41,7 @@
 										<field name="company_id" groups="base.group_multi_company" optional="hide"/>
 										<field name="location_id" options="{'no_create': True}" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
 										<field name="location_dest_id" options="{'no_create': True}" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
-										<field name="state"/>
+										<field name="state" optional="show" widget="badge" decoration-success="state == 'done'" decoration-info="state not in ('done', 'cancel')"/>
 										<!--<button name="action_confirm" type="object" string="Marcar Hecho"/>-->
 									</tree>
 								</field>	
