--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -39,8 +39,8 @@
 										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
 										<field name="partner_id" optional="show"/>
 										<field name="company_id" groups="base.group_multi_company" optional="hide"/>
-										<field name="location_id" options="{'no_create': True}" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
-										<field name="location_dest_id" options="{'no_create': True}" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
+										<field name="location_id" string="Desde" groups="stock.group_stock_multi_locations" optional="show"/>
+										<field name="location_dest_id" string="Para" groups="stock.group_stock_multi_locations" optional="show"/>
 										<field name="state" optional="show" widget="badge" decoration-success="state == 'done'" decoration-info="state not in ('done', 'cancel')"/>
 										<!--<button name="action_confirm" type="object" string="Marcar Hecho"/>-->
 									</tree>
