--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -19,7 +19,7 @@
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
 								<field name="task_picking">
-									<tree editable="button" multi_edit="1" sample="1">
+									<!--<tree editable="button" multi_edit="1" sample="1">
 										<field name="name" decoration-bf="1"/>
 										<field name="picking_type_id" optional="show"/>
 										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
@@ -29,7 +29,7 @@
 										<field name="location_dest_id" string="Para" optional="show"/>
 										<field name="state" optional="show" widget="badge" decoration-success="state == 'done'" decoration-info="state not in ('done', 'cancel')"/>
 										<button name="action_confirm" type="object" string="Marcar Hecho"/>
-									</tree>
+									</tree>-->
 									<form string="Transfer">
 										<field name="is_locked" invisible="1"/>
 										<field name="show_mark_as_todo" invisible="1"/>
