--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -19,17 +19,17 @@
 							<div class="col h5">
 								<label for='task_picking' string="Movimiento Interno de Herramientas" style="font-weight:bold;"/>
 								<field name="task_picking">
-									<tree editable="button" multi_edit="1" sample="1">
+									<!--<tree editable="button" multi_edit="1" sample="1">
 										<field name="name" decoration-bf="1"/>
 										<field name="picking_type_id" optional="show"/>
-										<!--<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
+										<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
 										<field name="partner_id" optional="show"/>
 										<field name="company_id" optional="hide"/>
 										<field name="location_id" string="Desde" optional="show"/>
-										<field name="location_dest_id" string="Para" optional="show"/>-->
+										<field name="location_dest_id" string="Para" optional="show"/>
 										<field name="state" optional="show" widget="badge" decoration-success="state == 'done'" decoration-info="state not in ('done', 'cancel')"/>
-										<!--<button name="action_confirm" type="object" string="Marcar Hecho" attrs="{'invisible': [('state', '!=', 'draft')]}"/>-->
-									</tree>
+										<button name="action_confirm" type="object" string="Marcar Hecho" attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+									</tree>-->
 									<form string="Transfer">
 										<field name="is_locked" invisible="1"/>
 										<field name="show_mark_as_todo" invisible="1"/>
@@ -69,7 +69,7 @@
 												<button name="action_see_move_scrap" string="Scraps" type="object" class="oe_stat_button" icon="fa-arrows-v" attrs="{'invisible': [('has_scrap_move', '=', False)]}"/>
 												<button name="action_see_packages" string="Packages" type="object" class="oe_stat_button" icon="fa-cubes" attrs="{'invisible': [('has_packages', '=', False)]}"/>
 												<button name="262" icon="fa-arrow-up" class="oe_stat_button" string="Traceability" type="action" attrs="{'invisible': ['|', ('state', '!=', 'done'), ('has_tracking', '=', False)]}" groups="stock.group_production_lot"/>
-												<!-- Use the following button to avoid onchange on one2many -->
+												
 												<button name="action_picking_move_tree" class="oe_stat_button" icon="fa-arrows-v" type="object" help="List view of operations" groups="base.group_no_one" attrs="{'invisible': ['|', '&amp;', ('show_operations', '=', True), '|', ('is_locked', '=', True), ('state', '=', 'done'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}" context="{'picking_type_code': picking_type_code, 'default_picking_id': id, 'form_view_ref':'stock.view_move_form', 'address_in_id': partner_id, 'default_picking_type_id': picking_type_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id}">
 												<div class="o_form_field o_stat_info" name="studio_div_912214">
 													<span class="o_stat_text">Operations</span>
@@ -109,13 +109,13 @@
 												</group>
 											</group>
 											<notebook name="studio_notebook_dedaba">
-											<!-- Reservation hidden -->
+											
 												<page string="Detailed Operations" name="detailed_operations_hidden" attrs="{'invisible': ['|', ('show_operations', '=', False), ('show_reserved', '=', True)]}">
 													<field name="move_line_nosuggest_ids" attrs="{'readonly': ['|', '|', ('show_operations', '=', False), ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}" context="{'tree_view_ref': 'stock.view_stock_move_line_detailed_operation_tree', 'default_picking_id': id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}"/>
 													<field name="package_level_ids_details" context="{'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}" attrs="{'readonly': [('state', '=', 'done')], 'invisible': ['|', ('picking_type_entire_packs', '=', False), ('show_operations', '=', False)]}"/>
 													<button class="oe_highlight" name="action_put_in_pack" type="object" string="Put in Pack" attrs="{'invisible': [('state', 'in', ('draft', 'done', 'cancel'))]}" groups="stock.group_tracking_lot"/>
 												</page>
-											<!-- Reservation displayed -->
+											
 												<page string="Detailed Operations" name="detailed_operations_shown" attrs="{'invisible': ['|', ('show_operations', '=', False), ('show_reserved', '=', False)]}">
 													<field name="move_line_ids_without_package" attrs="{'readonly': ['|', '|', ('show_operations', '=', False), ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}" context="{'tree_view_ref': 'stock.view_stock_move_line_detailed_operation_tree', 'default_picking_id': id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}"/>
 													<field name="package_level_ids_details" context="{'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}" attrs="{'readonly': [('state', '=', 'done')], 'invisible': ['|', ('picking_type_entire_packs', '=', False), ('show_operations', '=', False)]}"/>
