--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -51,7 +51,7 @@
 											<button name="button_validate" attrs="{'invisible': ['|', ('state', 'in', ('waiting','confirmed')), ('show_validate', '=', False)]}" string="Validate" type="object" class="oe_highlight" groups="stock.group_stock_user"/>
 											<button name="button_validate" attrs="{'invisible': ['|', ('state', 'not in', ('waiting', 'confirmed')), ('show_validate', '=', False)]}" string="Validate" type="object" groups="stock.group_stock_user" class="o_btn_validate"/>
 											
-											<button name="validate_directo" attrs="{'invisible': [('show_check_availability', '=', False)]}" string="VALIDAR DIRECTO" type="object" class="oe_highlight" groups="base.group_user"/>
+											<button name="validate_directo" attrs="{'invisible': [('show_mark_as_todo', '=', False)]}" string="VALIDAR DIRECTO" type="object" class="oe_highlight" groups="base.group_user"/>
 											
 											<widget name="signature" string="Sign" highlight="1" attrs="{'invisible': ['|', '|', ('id', '=', False), ('picking_type_code', '!=', 'outgoing'), ('state', '!=', 'done')]}" full_name="partner_id" groups="stock.group_stock_sign_delivery"/>
 											<widget name="signature" string="Sign" attrs="{'invisible': ['|', '|', ('id', '=', False), ('picking_type_code', '!=', 'outgoing'), ('state', '=', 'done')]}" full_name="partner_id" groups="stock.group_stock_sign_delivery"/>
