--- a/mstech/views/report_jasatec_contract.xml
+++ b/mstech/views/report_jasatec_contract.xml
@@ -13,5 +13,18 @@
             <field name="binding_model_id" ref="sale.model_sale_order"/>
             <field name="binding_view_types">form</field>
         </record>
+
+        <record id="jasatec_estado_arrendamiento" model="ir.actions.report">
+            <field name="name">Estado de Arrendamiento de Equipos</field>
+            <field name="model">sale.order</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">mstech.report_sale_arrendamiento</field>
+            <field name="report_file">mstech.report_sale_arrendamiento</field>
+            <field name="print_report_name">'Estado Arrendamiento - %s' % (object.partner_id.name)</field>
+            <field name="attachment">'Estado Arrendamiento - %s' % (object.partner_id.name)</field>
+            <field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_manager')])]"/>
+            <field name="binding_model_id" ref="sale.model_sale_order"/>
+            <field name="binding_view_types">form</field>
+        </record>
     </data>
 </odoo>
