--- a/mstech/report/report_sale_arrendamiento.xml
+++ b/mstech/report/report_sale_arrendamiento.xml
@@ -56,7 +56,7 @@
             </t>
         </template>
         
-        <template id="report_sale_contract">
+        <template id="report_sale_arrendamiento">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-set="lang" t-value="user.sudo().lang"/>
