--- a/mstech/views/report_jasatec_contract.xml
+++ b/mstech/views/report_jasatec_contract.xml
@@ -26,5 +26,25 @@
             <field name="binding_model_id" ref="sale.model_sale_order"/>
             <field name="binding_view_types">form</field>
         </record>
+        
+        <record id="paperformat_arrendamiento" model="report.paperformat">
+            <field name="name">European A4 low margin</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Landscape</field>
+            <field name="margin_top">4</field>
+            <field name="margin_bottom">4</field>
+            <field name="margin_left">4</field>
+            <field name="margin_right">4</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">0</field>
+            <field name="dpi">90</field>
+        </record>
+        
+        <record id="mstech.report_sale_arrendamiento" model="ir.actions.report">
+            <field name="paperformat_id" ref="sale.paperformat_lowmargin" />
+        </record>
     </data>
 </odoo>
