--- a/mstech/report/report_sale_arrendamiento.xml
+++ b/mstech/report/report_sale_arrendamiento.xml
@@ -40,8 +40,17 @@
                     </style>
                     <t t-set="contract_client" t-value="o.partner_id"/>
                     <div class="oe_structure"/>
+                    
+                    <div style="position:absolute;top:850px; page-break-inside: avoid;">
+                        <span>
+                            <b><u>RESUMEN DE ESTADO DE ARRENDAMIENTO DE EQUIPOS</u></b><br/>
+                            <br/><b>CONTRATO DE SERVICIO DE ARRENDAMIENTO DE EQUIPAMENTO</b><br/>
+                            Lima, <span t-esc="o.date_order.strftime('%m de %B de %Y')"/>
+                        </span>
+                    </div>
+                    
                     <div style="page-break-inside:avoid;" class="row text-center">
-                        <div class="col h5">
+                        <div class="col">
                             <span>
                                 <b><u>RESUMEN DE ESTADO DE ARRENDAMIENTO DE EQUIPOS</u></b><br/>
                                 <br/><b>CONTRATO DE SERVICIO DE ARRENDAMIENTO DE EQUIPAMENTO</b><br/>
@@ -51,16 +60,10 @@
                         </div>
                     </div>
                     
-                    <div class="oe_structure"/>
+                   <!-- <div class="oe_structure"/>-->
                 </div>
                 
-                <div style="position:absolute;top:850px; page-break-inside: avoid;">
-                    <span>
-                        <b><u>RESUMEN DE ESTADO DE ARRENDAMIENTO DE EQUIPOS</u></b><br/>
-                        <br/><b>CONTRATO DE SERVICIO DE ARRENDAMIENTO DE EQUIPAMENTO</b><br/>
-                        Lima, <span t-esc="o.date_order.strftime('%m de %B de %Y')"/>
-                    </span>
-                </div>
+                
             </t>
         </template>
         
